WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270370
Consecutive calls to `-insertTextAlternatives:` should not cause dictation underlines to disappear
https://bugs.webkit.org/show_bug.cgi?id=270370
Summary
Consecutive calls to `-insertTextAlternatives:` should not cause dictation un...
Wenson Hsieh
Reported
2024-03-01 12:13:50 PST
rdar://107087527
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2024-03-01 12:32:47 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25359
EWS
Comment 2
2024-03-01 16:31:41 PST
Committed
275579@main
(ee754d7dfc57): <
https://commits.webkit.org/275579@main
> Reviewed commits have been landed. Closing PR #25359 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug